# StreamingRust

./: Cargo.toml  Dockerfile  MigrationGuide.Rust.md  README.md  build.rs  config_migration_notes.md  shape_migration_notes.md
configs/: default.yaml  development.yaml
grammar/: OutboundAPILexer.g4  OutboundAPIParser.g4  README.md
src/: lib.rs  main.rs
src/apperr/: mod.rs
src/application/: filter_engine.rs  mod.rs  pipeline.rs  planner.rs  ports.rs  quote_index.rs  rdp_calculator.rs  strategy.rs  transform.rs  validator.rs
src/domain/: data.rs  filters.rs  identifier.rs  mod.rs  query.rs  request.rs  source.rs
src/domain/timeexpr/: arithmetic.rs  interval.rs  mod.rs  point_in_time.rs
src/infrastructure/: antlr_parser.rs  config.rs  mod.rs
src/infrastructure/auth/: license.rs  middleware.rs  mod.rs
src/infrastructure/cassandra/: mod.rs  query_builder.rs  repository.rs
src/infrastructure/http/: handlers.rs  license_middleware.rs  mod.rs  router.rs  validation_middleware.rs
src/infrastructure/mssql/: mapping_resolver.rs  mod.rs  query_builder.rs  repository.rs  statistics.rs
src/infrastructure/throttling/: mod.rs  rate_limiter.rs  redis_gate.rs
tests/: logic_tests.rs  smoke_test.ps1
tools/antlr/: README.md  generate.ps1
