[package]
name = "streaming-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Web framework
axum = { version = "0.7.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database & Infrastructure
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
scylla = { version = "0.13", features = ["chrono"] }
fred = { version = "9.0", features = ["serde-json", "rustls", "i-scripts"] }
bb8 = "0.8"
bb8-tiberius = "0.15"
azure_identity = "0.21"
azure_core = "0.21"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.25"
async-trait = "0.1"
async-stream = "0.3"
jsonschema = "0.19"
jsonwebtoken = "9.3"
openidconnect = "3.5"
config = "0.14"
serde_yaml = "0.9"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

# Parsing (ANTLR)
antlr4rust = "0.5.2"
tokio-util = { version = "0.7.18", features = ["compat"] }
reqwest = { version = "0.13.4", features = ["json", "rustls"] }

[build-dependencies]
antlr4rust = "0.5.2"

[profile.release]
opt-level = 3        # Max speed optimizations
lto = true           # Full Link-Time Optimization for speed and size
codegen-units = 1    # Maximizes optimization potential and size reduction
panic = "abort"      # Removes stack unwinding to reduce binary size
strip = true         # Strips all symbols and debug info for minimal file size

